Testes com login e senha

--- a/index/index.html
+++ b/index/index.html
@@ -82,34 +82,43 @@
   </header>
 <!-- .page-section -->
 
-
+<!-- login -->
 <div id="id01"  class="w3-modal" style="z-index:11;">
-    <div class=" w3-modal-content w3-card-4 w3-animate-zoom" style="max-width:600px">
-
-      <div class="w3-center"><br>
-        <span onclick="document.getElementById('id01').style.display='none'" class="w3-button w3-xlarge w3-hover-red w3-display-topright" title="Close Modal">&times;</span>
-        <img src="img_avatar4.png" alt="Avatar" style="width:30%" class="w3-circle w3-margin-top">
-      </div>
-
-      <form class="w3-container" action="/action_page.php">
+    <div class=" w3-modal-content w3-card-4 w3-animate-zoom" style="max-width:400px">
+      Login
+      <form class="w3-container" method="POST" action="../php/login.php">
         <div class="w3-section">
-          <label><b>Username</b></label>
-          <input class="w3-input w3-border w3-margin-bottom" type="text" placeholder="Enter Username" name="usrname" required>
-          <label><b>Password</b></label>
-          <input class="w3-input w3-border" type="password" placeholder="Enter Password" name="psw" required>
-          <button class="w3-button w3-block w3-green w3-section w3-padding" type="submit">Login</button>
-          <input class="w3-check w3-margin-top" type="checkbox" checked="checked"> Remember me
+          <label><b>Usuário</b></label>
+          <input class="w3-input w3-border w3-margin-bottom" type="text" placeholder="Digite seu usuário" name="login" id="login" required>
+          <label><b>Senha</b></label>
+          <input class="w3-input w3-border" type="password" placeholder="Digite sua senha" name="senha" id="senha" required>
+          <br>
+          <button class="btn btn-primary ml-lg-2 w3-margin-bottom" type="submit" value="Entrar" id="entrar" name="entrar">Login</button>
+  
         </div>
       </form>
 
-      <div class="w3-container w3-border-top w3-padding-16 w3-light-grey">
-        <button onclick="document.getElementById('id01').style.display='none'" type="button" class="w3-button w3-red">Cancel</button>
-        <span class="w3-right w3-padding w3-hide-small">Forgot <a href="#">password?</a></span>
-      </div>
+      <button onclick="document.getElementById('id02').style.display='block'" class="btn btn-primary ml-lg-2 w3-margin-bottom">Cadastrar</button>
 
     </div>
   </div>
 
+<!--cadastro-->
+<div id="id02"  class="w3-modal" style="z-index:12;">
+    <div class=" w3-modal-content w3-card-4 w3-animate-zoom" style="max-width:400px">
+      Cadastro
+      <form class="w3-container" method="POST" action="../php/cadastro.php">
+        <div class="w3-section">
+          <label><b>Usuário</b></label>
+          <input class="w3-input w3-border w3-margin-bottom" type="text" placeholder="Digite seu usuário" name="login" id="login" required>
+          <label><b>Senha</b></label>
+          <input class="w3-input w3-border" type="password" placeholder="Digite sua senha" name="senha" id="senha" required>
+          <br>
+          <button class="btn btn-primary ml-lg-2 w3-margin-bottom" type="submit" value="Cadastrar" id="cadastrar" name="cadastrar">Cadastrar</button>
+        </div>
+      </form>
+    </div>
+  </div>
 
 
   <div class="page-section" id="about">
